# Neural_Network_from_Scratch

./: Classeur reseau de neurone v1.xlsx  README.md
neuron_network_clear/: 1_fwd_propagation.c  1_fwd_propagation.h  2_back_propagation.c  2_back_propagation.h  CMakeLists.txt  affichage_tableau.c  affichage_tableau.h  calcul.c  calcul.h  creator.c  creator.h  donnees.txt  main.c  structure.h  training.c  training.h
